docs(readme): 按实测重写，区分"已验证/仅实现/未验证"
- 每条声明都标注证据来源，不再用"通过"掩盖未验证项
- 新增 §1.3（v3.2）：docker compose 一键部署、前端同源托管 8083、Testcontainers 真跑、
  熔断、空密码修复、DbLayerIT 六条实测记录
- §9.1 拆成"本地模式"与"Docker 模式"两张实测表，附具体数字与日志证据
- 修正旧文档 6 处与实测相反的声明（同源托管、自动预热轮次、5 次限流、防污染、member 引号、类型白名单）
- 补充国内网络换源与环境提示（Maven 镜像、Windows 下 Testcontainers 需要指定 Docker 管道）
- 已知限制表更新：Redis 故障期延迟、Docker 构建对网络的依赖、打包与运行互斥等